--- a/lezione1.tex
+++ b/lezione1.tex
@@ -4,6 +4,11 @@
 \usetheme{Madrid}
 \usecolortheme{orchid}
 
+\definecolor{blue}{HTML}{608bf6}
+\definecolor{black}{HTML}{1c1c1c}
+\definecolor{green}{HTML}{39e600}
+\definecolor{grey}{HTML}{949494}
+
 \title{Introduzione alle CTF}
 \subtitle{Lezione 1}
 \author{Alessandro Righi \and Cristiano Di Bari}
@@ -159,26 +164,52 @@ prese dalla piattaforma di allenamento delle Olimpiadi di Cybersecurity (\url{ht
 a cui vi invitiamo ad iscrivevi.
 \end{frame}
 
-\subsection{Tool: Burp suite}
-
-\begin{frame}{}
+\begin{frame}{Traverse me}
 \end{frame}
+
+\begin{frame}{Traverse me more}
+\end{frame}
+
+% 1. Traverse me
+% 2. Traverse me more
+% 3. Light or dark (extra)
+
+\subsection{Tool: Burp suite}
+\begin{frame}Flags shop{}
+% https://training.olicyber.it/challenges#challenge-43
+\end{frame}
+
+%%% SQLI 
 
 \section{SQL Injection}
 \begin{frame}{}
 \end{frame}
 
-\subsection{Tool: sqlmap}
-\begin{frame}{}
+\begin{frame}{Basic SQLi}
+% https://training.olicyber.it/challenges#challenge-48
+\end{frame}
+
+\begin{frame}{Admin's secret}
+
+% https://training.olicyber.it/challenges#challenge-44
 \end{frame}
 
 
-\section{Cross site scripting}
 \begin{frame}{}
 \end{frame}
 
-\subsection{Tool: ngrok}
-\begin{frame}{}
+\begin{frame}{Password changer 3000}
+    http://password-changer.challs.olicyber.it
 \end{frame}
 
-\end{document}
+\begin{frame}{Tool: curl}
+\end{frame}
+\begin{frame}{A TOO small reminder...}
+    https://training.olicyber.it/challenges#challenge-36
+\end{frame}
+
+\begin{frame}
+https://training.olicyber.it/challenges#challenge-53
+\end{frame}
+
+\subsection{XSS}
