--- a/lezione1.tex
+++ b/lezione1.tex
@@ -23,6 +23,13 @@
 \titlepage
 \end{frame}
 
+\begin{frame}
+Queste slides sono rilasciate con licenza CC BY 4.0. Puoi trovare una copia della licenza al seguente indirizzo \url{http://creativecommons.org/licenses/by/4.0/}
+\vfill
+\center
+\includegraphics{img/by.eps}
+\end{frame}
+
 \section{Introduzione}
 
 \begin{frame}{Chi siamo?}
