aggiunto copyright, rinominati file

--- a/presentazione.tex
+++ b/presentazione.tex
@@ -13,7 +13,7 @@
 \definecolor{grey}{HTML}{949494}
 
 \title{Introduzione alle CTF}
-\subtitle{Lezione 1}
+\subtitle{Corso in Ingegneria del Software}
 \author{Alessandro Righi \and Cristiano Di Bari}
 \institute{Università degli Studi di Verona}
 \date{9 Novembre 2023}
