ottimizzate per visualizzazione

--- a/presentazione.tex
+++ b/presentazione.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt]{beamer}
+\documentclass[12pt,handout]{beamer}
 \usepackage{tikz}
 \usepackage[italian]{babel}
 \usepackage{minted}
